// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <header
    className="md position-top container-parent sc-eNQAEJ jQDLvU"
  >
    <div />
  </header>
</span>
`;

exports[`When using snapshots with the maximized prop Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <header
    className="md position-top container-parent maximized sc-eNQAEJ jQDLvU"
  >
    <div />
  </header>
</span>
`;
